tolto tooltip messo nota in un div

--- a/src/main/resources/templates/segreteria/valutazione.html
+++ b/src/main/resources/templates/segreteria/valutazione.html
@@ -44,7 +44,7 @@
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
@@ -55,7 +55,7 @@
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
@@ -80,7 +80,7 @@
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
@@ -104,13 +104,13 @@
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 											</tr>
@@ -119,19 +119,19 @@
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
@@ -145,7 +145,7 @@
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
@@ -156,7 +156,7 @@
 												<td class="otherValidationCheck">
 													<div>
 														<span class="fa fa-remove red" th:title="#{label.non_valido}"></span>
-														<button class="fa fa-info-circle pull-right note" data-toggle="tooltip" data-trigger="focus" data-placement="top" data-container="#validazione-modal" title="Ciao, sono una nota! Questo valore non va bene!"></button>
+														<div class="nota-validazione">Holy guacamole! Best check yo self, you're not looking too good. Sono una nota molto più lunga che ingigantisce questa row all'inverosimile =( </div>
 													</div>
 												</td>
 												<td class="otherValidationCheck">
