inserito id del div che andrà a finire in showAll

--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiShow.html
@@ -18,7 +18,9 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="accreditamento/accreditamentoAllegatiFragment :: accreditamentoAllegati(false)"></th:block>
+					<div id="toModal">
+						<th:block th:include="accreditamento/accreditamentoAllegatiFragment :: accreditamentoAllegati(false)"></th:block>
+					</div>
 
 				</div>
 			</div>
