--- a/src/main/resources/templates/persona/personaShow.html
+++ b/src/main/resources/templates/persona/personaShow.html
@@ -17,7 +17,9 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="persona/personaFragment :: persona(false)"></th:block>
+					<div id="toModal">
+						<th:block th:include="persona/personaFragment :: persona(false)"></th:block>
+					</div>
 
 				</div>
 			</div>
