--- a/src/main/resources/templates/sede/sedeShow.html
+++ b/src/main/resources/templates/sede/sedeShow.html
@@ -20,7 +20,9 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="sede/sedeFragment :: sede(false)"></th:block>
+					<div id="toModal">
+						<th:block th:include="sede/sedeFragment :: sede(false)"></th:block>
+					</div>
 
 				</div>
 			</div>
