FieldEditabili Piano formativo WIP

--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -5,7 +5,7 @@
 <head lang="it">
 </head>
 <body>
-	<div layout:fragment="content" th:with="counter=${eventoWrapper.idOffset-1}">
+	<div layout:fragment="content">
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
