Implementata logica dei pulsanti modifica/elimina/inserisci/assegna

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -647,7 +647,7 @@ h2 {
 	font-size: 17px;
 }
 
-div#toModal > div.x_content {
+div.collapsible > div#toModal > div.x_content {
 	display: none;
 }
 
